kernel/vm: Truncate swap files when disabling or starting with swap disabled.

Fixes #4843.